# GitAccountable

./: .env.template  .gitignore  Dockerfile  LICENSE  Procfile  README.md  about.txt  heroku.yml  package-lock.json  package.json  pyproject.toml  railway.toml  railway_vars.json  render.yaml  requirements.txt  test_commands.txt  test_nl_commands.txt  test_repo_commands.txt  test_search_commands.txt  theme.json
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/nix/: env.json
.upm/: store.json
client/src/: index.css
client/src/components/: ActivityItem.tsx  ChatInterface.tsx  Header.tsx  InstallPWA.tsx  RepositoryCard.tsx  Sidebar.tsx
client/src/hooks/: useGitHubData.ts
client/src/lib/: utils.ts
client/src/pages/: Conversations.tsx
export_files/: LICENSE  README.md  about.txt
export_files/client/: index.html
export_files/client/src/: App.tsx  main.tsx
export_files/public/: manifest.json  offline.html
export_files/scripts/: convert-dashboard.js  convert-icons.js  convert-logo.js
export_files/server/: openai.ts  routes.ts
export_files/shared/: schema.ts
public/: sw.js
scripts/: cleanup_repos.py  deploy.sh  deploy_railway.sh  setup_airtable.py  setup_env.sh  setup_railway_vars.sh  test_env.py
server/: github.ts  storage.ts
src/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  bot.py  chat.py
src/managers/: __init__.py  airtable_manager.py  github_manager.py  task_manager.py
src/utils/: command_parser.py  date_parser.py
src/web/: app.py  auth.py
tests/: test_airtable.py  test_bot.py  test_main.py  test_tasks.py
(+10 files in other folders)
